# livox_catkin_ws

./: .gitignore  README.md  setting.txt
Project/BLD-400R/: BLD-400R.ino
Project/BLD-400R-K/: BLD-400R-K.ino  BLD-400R-K_20250523.txt
Project/BLD-400R/scripts/: controller_id_set.ui  controller_id_setup.py  controller_id_setup1.py  controller_id_setup2.py  parking_robot_gui.py  parking_robot_gui.ui  protocol_definition.ods  test.ui
src/lidar3d_roi_pkg/: CMakeLists.txt
src/lidar3d_roi_pkg/launch/: lidar3d_roi_node.launch  lidar_3d_detect_tire.launch
src/lidar3d_roi_pkg/src/: lidar3d_roi_node.cpp
src/lidar_3d_roi_pkg/: CMakeLists.txt  package.xml
src/lidar_3d_roi_pkg/launch/: lidar_3d_roi_node.launch
src/lidar_3d_roi_pkg/rviz/: tire_detect.rviz
src/lidar_3d_roi_pkg/src/: 1.txt  lidar_3d_detect_tire.cpp  lidar_3d_roi_node.cpp
src/livox_to_laserscan/: CMakeLists.txt  README.md  package.xml
src/livox_to_laserscan/config/: livox_scan_params.yaml
src/livox_to_laserscan/launch/: livox360_to_scan.launch  livox_to_scan.launch  livox_utm_mapper.launch
