<?xml version="1.0"?>
<package format="2">
  <name>livox_to_laserscan</name>
  <version>1.0.0</version>
  <description>Livox MI360 LiDAR to 2D LaserScan converter for navigation</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>

  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
  </export>
</package>
